brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4240
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
