brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__realtime_audio_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Settings
  Configure settings for brocode.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  Press enter to confirm or esc to go back
