brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 11878
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask brocode to do anything                                                    "
"                                                                                "
"  Fast on                                                                       "
