brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Brocode to do anything                                                    "
"                                                                                "
"  gpt-5.3-brocode medium                        Plan mode (shift+tab to cycle)  "
